Footer z-index fix

--- a/css/screen.css
+++ b/css/screen.css
@@ -101,6 +101,7 @@ h2.loading {
   box-shadow: 0px -5px 5px #888888;
   margin: 0 0 0 0;
   min-height: 0;
+  z-index: 43;
 }
 
 .now-playing .upload .media-body,
